--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.7.0",
     "antd": "^5.20.6",
     "i18next": "^23.15.1",
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.5.1",
-    "redux-toolkit": "^1.1.2",
+    "react-redux": "^9.2.0",
     "sass": "^1.87.0"
   },
   "devDependencies": {
