--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
     "antd": "^5.20.6",
+    "dayjs": "^1.11.13",
     "i18next": "^23.15.1",
     "next": "14.2.12",
     "react": "^18",
